@@ -27,6 +27,7 @@
 	* src/gui/menuwindow.cpp: Fixed missing pixels at bottom and right.
 	* src/gui/window.cpp, src/gui/window.h: Changed to use default values
 	when restoring missing settings.
+	* src/gui/buy.cpp, src/gui/buy.h: Converted to layout handler.
 
 2007-10-20  Guillaume Melquiond  <guillaume.melquiond@gmail.com>
 
